@@ -5,13 +5,10 @@ import net.runelite.api.gameval.NpcID;
 import net.runelite.client.plugins.microbot.BlockingEvent;
 import net.runelite.client.plugins.microbot.BlockingEventPriority;
 import net.runelite.client.plugins.microbot.Microbot;
-import net.runelite.client.plugins.microbot.util.npc.Rs2Npc;
 import net.runelite.client.plugins.microbot.util.player.Rs2Player;
 import net.runelite.client.plugins.microbot.util.walker.Rs2Walker;
 import net.runelite.client.plugins.microbot.woodcutting.AutoWoodcuttingPlugin;
 import net.runelite.client.plugins.microbot.woodcutting.enums.ForestryEvents;
-
-import java.util.stream.Collectors;
 
 import static net.runelite.client.plugins.microbot.util.Global.sleepUntil;
 @Slf4j
@@ -27,9 +24,9 @@ public class FlowersEvent implements BlockingEvent {
         try{
             if (plugin == null || !Microbot.isPluginEnabled(plugin)) return false;
             if (Microbot.getClient() == null || !Microbot.isLoggedIn()) return false;
-            var flowers = Rs2Npc.getNpcs(npc ->
-                    npc.getName() != null && isFloweringBush(npc.getId())
-            ).collect(Collectors.toList());
+            var flowers = Microbot.getRs2NpcCache().query()
+                    .where(npc -> npc.getName() != null && isFloweringBush(npc.getId()))
+                    .toList();
             return !flowers.isEmpty();
         } catch (Exception e) {
             log.error("FlowersEvent: Exception in validate method", e);
@@ -49,9 +46,9 @@ public class FlowersEvent implements BlockingEvent {
         }
         log.info("FlowersEvent: Executing Flowers event");
         while (this.validate()) {
-            var flowers = Rs2Npc.getNpcs(npc -> 
-                npc.getName() != null && isFloweringBush(npc.getId())
-            ).collect(Collectors.toList());
+            var flowers = Microbot.getRs2NpcCache().query()
+                    .where(npc -> npc.getName() != null && isFloweringBush(npc.getId()))
+                    .toList();
             
             if (flowers.isEmpty()) {
                 break;
@@ -69,7 +66,7 @@ public class FlowersEvent implements BlockingEvent {
                 continue;
             }
 
-            if (Rs2Npc.interact(availableFlower, "Tend-to")) {
+            if (availableFlower.click("Tend-to")) {
                 Rs2Player.waitForAnimation();
                 sleepUntil(() -> !Rs2Player.isInteracting(), 8000);
             }
